# TP_LOGM

./: CMakeLists.txt  README.md  report_draft.md
include/: clauses_avl.h  formule_to_cnf.h  resolution.h  sodoku_by_resolution.h
src/: clauses_avl.c  fnc_main.c  formule_to_cnf.c  main.c  resolution.c  sodoku_by_resolution.c
